# deinterf

./: pyproject.toml
deinterf/: compensator.py
deinterf/compensator/tmi/linear/: _term.py  tolles_lawson.py
deinterf/foundation/: __init__.py  _data.py  _term.py  sensors.py
deinterf/utils/: transform.py
deinterf/utils/data_ioc/: __init__.py  _data.py  _data_ndarray.py
example/: main_compensator.py
examples/: compensate_tmi.py  compensate_tmi_extended.py
