[project]
name = "deinterf"
version = "0.0.1"
description = "Aeromagnetic Data Compensation for Magnetic Interference"
readme = "README.md"
requires-python = ">=3.9"

[project.dependencies]
- "numpy"
- "scipy"
- "pandas"
- "loguru"
- "scikit-learn"

[project.authors]
name = "dorian"
email = "dorian.li@outlook.com"

[project.classifiers]
- "Programming Language :: Python :: 3"
- "License :: OSI Approved :: MIT License"
- "Operating System :: OS Independent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
